<?xml version="1.0"?>
<package format="2">
  <name>rosanything</name>
  <version>0.0.0</version>
  <description>The rosanything package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosbash</depend>

  <export>
  </export>
</package>
